# hbridge

./: .gitignore  CMakeLists.txt  HBridge.hpp  HBridgeDriver.cpp  HBridgeDriver.hpp  Makefile  Protocol.cpp  Protocol.hpp  adc.c  adc.h  controller_interface.c  controller_interface.h  dummycontroller.c  dummycontroller.h  hbridge.cpp  hbridge.h  hbridge.pc.in  hico_api.h  i2c.c  i2c.h  init.c  init.h  main.c  manifest.xml  md03.c  md03.h  openocd.cfg  packet.h  pid.c  pid.h  printf.c  printf.h  protocol.h  protocol.hpp  rc.c  rc.h  spi.c  spi.h  stm32f10x_conf.h  stm32f10x_it.c  (+7 more)
documents/: protocoll.tex
firmware/: CMakeLists.txt  CodeSourcery.cmake  Makefile  assert.c  assert.h  can.c  can.h  controllers.c  controllers.h  cortexm3_macro.s  current_measurement.c  current_measurement.h  current_measurementv2.c  debug.gdb  encoder.c  encoder.h  encoder_adc.c  encoder_adc.h  encoder_ichaus.c  encoder_ichaus.h  encoder_quadrature.c  encoder_quadrature.h  encoder_quadrature_exti.c  flash-bin.script  gen_checksum.c  hbridge.c  hbridge.h  hbridgev2.c  i2c.c  i2c.h  lm73cimk.c  lm73cimk.h  main.c  main.h  main_pcbv2.c  openocd-0.3.1.cfg  openocd-0.4.0.cfg  openocd-0.5.0.cfg  openocd.cfg  openocddebug-0.3.0.cfg  (+23 more)
firmware/common/: controllers.c  encoder.c  hbridge_cmd.c  hbridge_cmd.h  hbridge_cmd2.c  hbridge_cmd2.h  packets.c  packets.h  pid.c  pid.h  position_controller.c  position_controller.h  protocol.c  protocol.h  protocol_low_priority.c  protocol_low_priority.h  pwm_controller.c  pwm_controller.h  speed_controller.c  speed_controller.h  state.c  state.h  systick.c  systick.h  temperature_sensor.c
firmware/drivers/: assert.h  can.h  i2c.c  pid.c  printf.c  tmp100.c  usart.c
firmware/hbridgeCommon/: encoder_adc.c  encoder_bmmv.c  encoder_endswitch.c  encoder_endswitch.h  encoder_ichaus.c  encoder_quadrature.c  encoder_quadrature.h  encoder_quadrature_exti.c  encoder_quadrature_exti.h  openocd-0.3.0.cfg  openocd-0.4.0.cfg  openocd-0.5.0.cfg  openocddebug.cfg  protocol_can.c  protocol_can.h  stm32f10x_conf.h  system_clock.c  thread.c
firmware/hbridgeCommon/drivers/: assert.c  assert.h  can.c  can.h  i2c.c  i2c.h  lm73cimk.c  printf.c  printf.h  spi.c  spi.h  tmp100.c  tmp100.h  usart.c  usart.h
firmware/hbridgeV1/: CMakeLists.txt  CodeSourcery.cmake  current_measurement.c  encoders.c  hbridge.c  main.c  openocd.cfg
firmware/hbridgeV2/: CMakeLists.txt  CodeSourcery.cmake  current_measurementv2.c  fragment_test.c  hbridgev2.c  main_pcbv2.c  openocd.cfg
firmware/inc/: stm32f10x_can.h  stm32f10x_i2c.h
firmware/interfaces/: controllers.h  current_measurement.h  encoder.h  hbridge.h  host_id.h  temperature_sensor.h  thread.h  usart.h
firmware/mainboard/asguardv3/: CMakeLists.txt  encoder.c  encoder.h  main.c  openocd.cfg
firmware/mainboard/asguardv4/: CMakeLists.txt  main.c  openocd.cfg
firmware/mainboard/asv/: CMakeLists.txt  hbridgestate.h  main_pcbv2.c  mainboardstate.c  mainboardstate.h  run.h  state.h  tokenhandling.h  watchdog.c  watchdog.h
firmware/mainboard/asv_new/: CMakeLists.txt  asv_can.c  asv_can.h  main.c  uwmodem.c  uwmodem.h
firmware/mainboard/avalon/: CMakeLists.txt  CodeSourcery.cmake  avalon_can.c  avalon_can.h  avalon_types.h  main.c  openocd.cfg  stm_h103_rom.ld  uwmodem.c  uwmodem.h
firmware/mainboard/common/: arc_driver.c  arc_driver.h  arc_multichannel.c  arc_multichannel.h  arc_notokendriver.c  arc_notokendriver.h  arc_packet.h  arc_ringbuffer.c  arc_ringbuffer.h  arc_tokendriver.c  arc_tokendriver.h  mainboardstate.c  mainboardstate.h  mb_types.h  packethandling.c  packethandling.h  time.c  time.h  timeout.c  timeout.h  tokenhandling.c  tokenhandling.h
firmware/mainboard/dagon/: CMakeLists.txt  Remote.cpp  can_noop_stub.cpp  dagon_main.c  foo  gpio_stub.c  motor.cpp  remote_msg.h  usart_noop_stub.c
firmware/mainboard/stubs/: CMakeLists.txt  can_noop_stub.c  usart_noop_stub.c
firmware/mainboardV2/: CMakeLists.txt  CodeSourcery.cmake  arc_driver.c  arc_packet.c  arc_packet.h  arc_ringbuffer.c  arc_ringbuffer.h  bool.h  hbridgestate.c  hbridgestate.h  hbridgev2.c  main_pcbv2.c  mainboardstate.c  openocd.cfg  packethandling.c  packethandling.h  run.c  state.h  tokenhandling.c
firmware/src/: stm32f10x_can.c
firmware/stubs/: CMakeLists.txt  can_stub.cpp  can_stub.hpp  current_measurement_stub.cpp  encoder_stub.cpp  firmware_sandbox.c  firmware_sandbox.cpp  hbridge_stub.cpp  lm73cimk_stub.cpp  main.cpp  packet_stub.cpp  packet_stub.hpp  printf_stub.c  stubs.kdev4  thread_stub.cpp  usart_stub.cpp  various_stubs.cpp
serial-programmer/: CMakeLists.txt  FindLibElf.cmake  Makefile  imagereader.cc  imagereader.hh  ioerror.hh  main.c  stm32prog.cc  stm32proto.cc  stm32proto.hh
src/: CMakeLists.txt  CanBusInterface.cpp  CanBusInterface.hpp  Controller.cpp  Controller.hpp  Encoder.cpp  Encoder.hpp  MotorDriverTypes.hpp  Protocol.cpp  Protocol.hpp  Reader.cpp  Reader.hpp  Types.hpp  Writer.cpp  Writer.hpp  stm32f10x_tim.c
test/: CMakeLists.txt  actuator_test.cpp  calib_tool.cpp  new_driver_test.cpp  pwm_test.cpp  sandbox_test.cpp  sensor_test.cpp  test.cpp
test/firmware-stubs/: CMakeLists.txt  can_stub.hpp  current_measurement_stub.cpp  encoder_stub.cpp  firmware_sandbox.c  hbridge_stub.cpp  lm73cimk_stub.cpp  systick_stub.cpp  usart_stub.cpp  various_stubs.cpp
usb/: platform_config.h  usb_endp.c  usb_endp.h  usb_prop.c
usb-core/: usb_init.h  usb_regs.h
